#12 добавление роли AUTHOR  и рефакторинг